--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,7 +3,8 @@ set(scanRegistration_SOURCES
         scanRegistration/scanRegistrationOption.cpp)
 
 set(laserOdometry_SOURCES
-        laserOdometry/laserOdometry.cpp)
+        laserOdometry/laserOdometry.cpp
+        laserOdometry/laserOdometryOption.cpp)
 
 set(laserMapping_SOURCES
         laserMapping/laserMapping.cpp)
@@ -13,8 +14,10 @@ set(kittiHelper_SOURCES
 
 
 add_library(${PROJECT_NAME} SHARED
-        ${scanRegistration_SOURCES})
+        ${scanRegistration_SOURCES}
+        ${laserOdometry_SOURCES})
 target_link_libraries(${PROJECT_NAME}
         ${OpenCV_LIBRARIES}
         ${PCL_LIBRARIES}
-        ${PCL_CONVERSIONS_LIBRARIES})
+        ${PCL_CONVERSIONS_LIBRARIES}
+        ${CERES_LIBRARIES})
