Upload Unfinished version

--- a/docker/Makefile
+++ b/docker/Makefile
@@ -1,3 +1,8 @@
+IMG_TAG = loam_family:noetic
+CONTAINER_NAME = sp_a_loam
+VOLUME_LOCAL = /home/bhbhchoi/docker_ws
+VOLUME_REMOTE = /root/docker_ws
+
 all: help
 
 help:
@@ -9,11 +14,15 @@ help:
 	@echo "   1. make clean              - remove all images"
 	@echo ""
 
+
 build:
-	@docker build --tag loam_family:noetic -f ./Dockerfile ..
+	@docker build -t $(IMG_TAG) .
 
 run:
-	@docker run --gpus all -it -v /tmp/.X11-unix:/tmp/.X11-unix -v /home/bhbhchoi/docker_ws:/root/docker_ws -e DISPLAY=unix$DISPLAY -e="QT_X11_NO_MITSHM=1" -p 8080:8080 -p 8022:22 --name sp_a_loam ros:aloam
+	@docker run --gpus all -it -v /tmp/.X11-unix:/tmp/.X11-unix -v $(VOLUME_LOCAL):$(VOLUME_REMOTE) -e DISPLAY=unix$DISPLAY -e="QT_X11_NO_MITSHM=1" --name $(CONTAINER_NAME) $(IMG_TAG)
 
 clean:
-	@docker rmi -f ros:aloam
+	@docker rmi -f $(IMG_TAG)
+
+remove:
+	@docker rm -f $(CONTAINER_NAME)
