--- a/docker/Makefile
+++ b/docker/Makefile
@@ -1,8 +1,3 @@
-IMG_TAG = loam_family:noetic
-CONTAINER_NAME = sp_a_loam
-VOLUME_LOCAL = /home/bhbhchoi/docker_ws
-VOLUME_REMOTE = /root/docker_ws
-
 all: help
 
 help:
@@ -15,14 +10,8 @@ help:
 	@echo ""
 
 
-build:
-	@docker build -t $(IMG_TAG) .
-
 run:
-	@docker run --gpus all -it -v /tmp/.X11-unix:/tmp/.X11-unix -v $(VOLUME_LOCAL):$(VOLUME_REMOTE) -e DISPLAY=unix$DISPLAY -e="QT_X11_NO_MITSHM=1" --name $(CONTAINER_NAME) $(IMG_TAG)
+	@docker-compose up -d
 
-clean:
-	@docker rmi -f $(IMG_TAG)
-
-remove:
-	@docker rm -f $(CONTAINER_NAME)
+rm:
+	@docker-compose down
